--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "eslint": "^4.6.1",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0"
   }
 }
