--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "classnames": "^2.2.5",
     "eslint": "^4.6.1",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "sparkpost": "^2.1.2"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^15.1.0",
