move sparkpost api key

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
   "www.uxmonk.com": {
     "env": {
-      "ROOT_URL": "http://www.dchristopher.me"
+      "ROOT_URL": "http://www.dchristopher.me",
+      "SPARKPOST_API_KEY": "aeb193645fe8e82804f632a8e950af1acb52ad98"
     }
   }
 }
