--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "sparkpost": "^2.1.2"
+    "sparkpost": "^2.1.2",
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^15.1.0",
